--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=MAX11300Arduino
+name=MAX11300
 version=1.0
-author=Pierce Nichols <pierce@logos-electro.com>
-maintainer=Pierce Nichols <pierce@logos-electro.com>
+author=Steve Sawtelle <sawtelles@janelia.hhmi.org> from work by Pierce Nichols
+maintainer=Steve Sawtelle <sawtelles@janelia.hhmi.org>
 sentence=A library to interface with the Maxim MAX11300 
-paragraph=Implements all on-chip functions
+paragraph=Implements most on-chip functions
 category=Sensors
 url=http://datasheets.maximintegrated.com/en/ds/MAX11300.pdf
 architectures=*
